2012-07-02  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* interopProvider.c:
	[ 3539569 ] Leaks in interopProvider

	* indCIMXMLHandler.c:
	[ 3539563 ] Memory leak in indCIMXMLHandler when Reliable Inds Enabled

	* providerDrv.c:
	[ 3539557 ] Memory leak in providerDrv with property list

	* test/TestProviders/cmpiTestInstanceProvider.c:
	[ 3539555 ] Memory leak in TestInstanceProvider

	* internalProvider.c, providerMgr.c:
	[ 1901737 ] Memory leak in internalProvider.c

2012-06-29 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* brokerUpc.c, indCIMXMLExport.c, indCIMXMLHandler.c, interopProvider.c,
	support.c, support.h:

	[ 3539006 ] Possible indication deadlock 

2012-06-28  Narasimha Sharoff  <nsharoff@us.ibm.com>
        * cimslpCMPI.c:
        [ 3538848 ] compile error in cimslpCMPI.c:291

2012-06-26  Narasimha Sharoff  <nsharoff@us.ibm.com>

        * cimcClientSfcbLocal.c, cimXmlRequest.c, interopProvider.c,
          providerDrv.c, queryOperation.h, queryStatement.c,
          selectexp.c:
        [ 3532494 ] interopProvider not honoring SourceNamespaces[] correctly

2012-06-25  Narasimha Sharoff  <nsharoff@us.ibm.com>

        * cimslpCMPI.c, cimXmlGen.c, cimXmlGen.h, cimXmlRequest.c,
        control.c, Makefile.am, providerMgr.h, sfcb.cfg.pre.in,
        sfcBroker.c, sfcCustomLib.c, support.c:
        [ 3534977 ] sfcb custom library and hostname

2012-06-15  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimXmlParser.c:
	[ 3535313 ] xmlUnescape may access memory beyond its buffer

2012-06-12  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* msgqueue.h:
	[ 3533179 ] Double definition for union semun  in FreeBSD
	(patch by PitRunner)

	* cimcClientSfcbLocal.c, cimcClientSfcbLocal.h:
	[ 3534659 ] Match SfcbLocal to sfcc update

2012-06-07 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* interopProvider.c:
	[ 3532951 ] Filter creation fails with disable default properties

2012-06-06 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>
